k8s-setup/pihole/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
  labels:
    app: pihole
    service: dns
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.250
  ports:
  - port: 5353
    targetPort: 5353
    protocol: UDP
    name: dns-udp
  - port: 5353
    targetPort: 5353
    protocol: TCP
    name: dns-tcp
  selector:
    app: pihole

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
  labels:
    app: pihole
    service: web
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.250
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: web
  selector:
    app: pihole
